# Highlighter

./: .gitignore  deepseek.js  generate-icon.js  main.js  package-lock.json  package.json  preload-capture.js  preload-long-capture.js  preload-long-overlay.js  preload-pin.js  preload-recognition.js  preload-record-frame.js  preload-record.js  preload-toolbar.js  preload.js
action/: action.html  action.js
capture/: capture.css  capture.html  capture.js  recognition-utils.js
config/: config.css  config.html  config.js
docs/superpowers/plans/: 2026-07-23-region-recording-annotations.md  2026-07-23-region-recording.md  2026-07-23-selection-toolbar.md
long-capture/: long-capture.css  long-capture.html  long-capture.js  matcher-worker.js  matcher.js  overlay.css  overlay.html  overlay.js
main/services/: long-capture-session.js  ocr-service.js  recording-service.js
native/ocr/: Cargo.toml  build.ps1
native/ocr/src/: main.rs
native/smart-select/: Program.cs  build.ps1
ocr/models/: README.md
pin/: pin.html
recognition/: recognition.css  recognition.html  recognition.js
record/: annotation-utils.js  frame.css  frame.html  frame.js  record.css  record.html  record.js  recording-utils.js
scripts/: stop-running.ps1
test/: annotation-utils.test.js  recording-service.test.js  recording-ui-contract.test.js  recording-utils.test.js  region-recording-entry.test.js  selection-toolbar-settings.test.js  toolbar-actions.test.js  toolbar-utils.test.js
tests/: long-capture.test.js  recognition-utils.test.js
toolbar/: toolbar-utils.js  toolbar.html
(+4 files in other folders)
