[package]
name = "highlighter-ocr-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "ndarray"] }
paddle-ocr-rs = { version = "0.6.1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
